# ComputerGraphics

./: .gitignore
fractal/: CMakeLists.txt  README.md  main.cpp
fractal/src/: fractal.cpp  fractal.frag  fractal.h  fractal.vert  load_shaders.cpp  load_shaders.h  window.cpp  window.h
stanford_bunny/: CMakeLists.txt  README.md
stanford_bunny/shaders/: 1.frag  1.vert  lightning.frag  lightning.vert  point_light.frag
stanford_bunny/src/: bunny_with_shadows.cpp  bunny_with_shadows.h  main.cpp
stanford_bunny/src/lightning/: light.cpp  light.h  material.cpp  material.h
stanford_bunny/src/model/: mesh.cpp  mesh.h  model.cpp  model.h
stanford_bunny/src/program/: camera.h  shaders.cpp  shaders.h  window.cpp  window.h
